--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Solapur City Guide</string>
+    <string name="menuText">Menu</string>
+    <string name="welcomeMsg">सोलापूर च्या पावन नगरीत आपले \nसहर्ष स्वागत आहे</string>
+    <string name="rate_us">Rate Us</string>
+    <string name="give_us_feedback">Give Feedback</string>
 </resources>
