--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="welcomeMsg">सिद्धरामेश्वरांच्या पावन नगरीत आपले सहर्ष स्वागत आहे</string>
     <string name="rate_us">Rate Us</string>
     <string name="give_us_feedback">Give Feedback</string>
-    <string name="app_name1">M H 1 3\t\t आ प लं \t\tसो ला पू र</string>
+    <string name="app_name1">M H 1 3\t आ प लं \tसो ला पू र</string>
 </resources>
