Mostly Last Commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Solapur City Guide</string>
+    <string name="app_name">MH13 आपलं सोलापूर</string>
     <string name="menuText">Menu</string>
     <string name="welcomeMsg">सिद्धरामेश्वरांच्या पावन नगरीत आपले सहर्ष स्वागत आहे</string>
     <string name="rate_us">Rate Us</string>
