--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,14 @@
     <string name="talent_text">\t\t\t\tतुमच्या मध्ये कला , स्किल्स आहेत , पण दाखवण्यासाठी व्यासपीठ नाहीये ?? अस असेल तर चिंता करू नकात ! तुमचे टॅलेंट आमच्यापर्यंत पोहोचवा आम्ही तुम्हाला व्यासपीठ देवू ! तुमचे टॅलेंट आम्ही आमच्या सोशल मीडिया पेज वर पोस्ट करुन तुम्हाला एक व्यासपीठ देण्यासोबत प्रोत्साहन देण्याच काम सुद्धा करू ! तर मग वाट कसली पाहताय ? खाली दिलेल्या व्हाट्सएप्प नंबर आणि जीमेल अकॉउंट वर आताच मेल करा..\n\n तुम्ही काय काय पाठवू शकता ?\n\n\t1. अभिनय ( एक्टिंग ) करत असाल तर त्याचे वीडियो ! \n\n\t2. लेखक असाल तर तुम्ही लिहलेले कोट्स , कथा , शायरी , कविता ! \n\n\t3. फोटोग्राफी करत असाल तर तुम्ही काढलेले फोटो ! \n\n\t4. आर्ट \n\n\t5. मीम्स (जोक्स ) \n\n\t6. संगीत क्षेत्र \n\n\t7. अजुन इतर जे काही तुमच्यात टॅलेंट असेल जे तुम्हाला इतरांपेक्षा वेगळ बनवत ते तुम्ही खाली दिलेल्या व्हाट्सएप्प नंबर वर पाठवू शकता !</string>
     <string name="whatsapp_text">Whatsapp (9307282629)</string>
     <string name="talent_mail_text">mh13aaplasolapur@gmail.com</string>
+    <string name="history_ad">ca-app-pub-2810018787727713/4952309782</string>
+    <string name="dharmik_ad">ca-app-pub-2810018787727713/8508411414</string>
+    <string name="sthanik_ad">ca-app-pub-2810018787727713/5690676382</string>
+    <string name="tourism_ad">ca-app-pub-2810018787727713/7933696345</string>
+    <string name="bus_ad">ca-app-pub-2810018787727713/7359174791</string>
+    <string name="emergency_ad">ca-app-pub-2810018787727713/1709362482</string>
+    <string name="link_ad">ca-app-pub-2810018787727713/3373604425</string>
+    <string name="talent_ad">ca-app-pub-2810018787727713/6494591785</string>
+    <string name="social_ad">ca-app-pub-2810018787727713/8083199140</string>
+    <string name="interstetial_main_ad">ca-app-pub-2810018787727713/5549369294</string>
 </resources>
